<resources>
    <string name="app_name">CC Manager</string>

    /*Generic errors*/
    <string name="err_no_credit_card_selected">No credit card selected</string>
    <string name="err_problem_loading_card_or_no_card_exists">Sorry, problem loading the Credit Card or no Credit Cards exist</string>
    <string name="err_problem_loading_credit_period">Sorry, there was a problem loading the Credit Period</string>


    /*Nav Drawer*/
    <string name="drawer_open">Drawer opened!</string>
    <string name="drawer_closed">Drawer Closed!</string>
    <string name="drawer_error_no_credit_cards">No credit cards.\n Tap here to add a new card.</string>
    <string name="drawer_error_select_a_credit_card">Tap to select a credit card.</string>
    <string name="fragment_name_overview">Overview</string>
    <string name="fragment_name_expense_list">Expenses</string>
    <string name="fragment_name_graphs">Expense Graphs</string>
    <string name="fragment_name_credit_cards">Credit Cards</string>
    <string name="fragment_name_about">About</string>
    <string name="fragment_name_preferences">Settings</string>

    /*Welcome Activity*/
    <string name="activity_welcome_txt_title">Welcome to CC Manager</string>
    <string name="activity_welcome_txt_subtitle">To get started, add a new Credit Card</string>
    <string name="activity_welcome_button_add_cc">Add a Credit Card</string>

    /* About Fragment */
    <string name="fragment_about_app_name">Credit Card Expense Manager</string>
    <string name="fragment_about_version">Version %1$s</string>
    <string name="fragment_about_author">Alejandro Bicelis %1$d</string>
    <string name="fragment_about_market_link">Rate app</string>
    <string name="fragment_about_github_link">View GitHub Project</string>
    <string name="fragment_about_website_link">www.alejandrobicelis.com.ve</string>

    /* Expense list Fragment*/


    /* Overview Fragment */
    <string name="fragment_overview_credit_date_period_title">Period:</string>
    <string name="fragment_overview_credit_balance_title">Balance:</string>
    <string name="fragment_overview_credit_extra_info_title">More info:</string>

    <string name="fragment_overview_credit_extra_info_spendiest_day">The spendiest day in this period is %1$s, where you spent %2$s %3$s.</string>
    <string name="fragment_overview_credit_extra_info_spendiest_category">The %1$s category represents %2$s%% of this month\'s expenses.</string>
    <string name="fragment_overview_credit_extra_info_average_per_day">You spend an average of %1$s %2$s a day.</string>
    <string name="fragment_overview_credit_extra_info_to_spend_average">You have %1$s %3$s left to spend, an average of %2$s %3$s a day.</string>


    /*Add new Credit Card Activity *
    <string name="activity_add_new_cc_title">Add a Credit Card</string>
    <string name="activity_add_new_cc_alias">Alias</string>
    <string name="activity_add_new_cc_bank">Bank Name</string>
    <string name="activity_add_new_cc_number">Card Number</string>
    <string name="activity_add_new_cc_currency">Currency</string>
    <string name="activity_add_new_cc_type">Card Type</string>
    <string name="activity_add_new_cc_expiration">Card Expiration</string>
    <string name="activity_add_new_cc_credit_limit">Credit Limit</string>
    <string name="activity_add_new_cc_closing_day">Closing Day</string>
    <string name="activity_add_new_cc_due_day">Due Day</string>
    <string name="activity_add_new_cc_background">Preview and Background Color</string>
    <string name="activity_add_new_cc_button_add_cc">Add Credit Card</string>
    <string name="activity_add_new_cc_expiration_datepicker_button_select">Select</string>
    <string name="activity_add_new_cc_expiration_datepicker_button_cancel">Cancel</string>
    <string name="activity_add_new_cc_error_bad_alias">Please enter an alias</string>
    <string name="activity_add_new_cc_error_bad_credit_limit">Please enter a valid credit limit</string>
    <string name="activity_add_new_cc_error_bad_expiration">Please select an expiration date</string>
    <string name="activity_add_new_cc_error_bad_closing_due_days">Closing and Due days must be different</string>
    <string name="activity_add_new_cc_error_cc_background_not_selected">Please select a Background for the Credit Card</string>
    <string name="activity_add_new_cc_exit_dialog_title">Exit the app</string>
    <string name="activity_add_new_cc_exit_dialog_message">Are you sure you want to exit CC Manager?</string>
    <string name="activity_add_new_cc_exit_dialog_button_exit">Yes</string>
    <string name="activity_add_new_cc_exit_dialog_button_cancel">Cancel</string>


    /*Expense detail activity*/
    <string name="activity_expense_detail_title">Expense Details</string>
    <string name="activity_expense_detail_label_amount">Amount:</string>
    <string name="activity_expense_detail_label_date">Date:</string>
    <string name="activity_expense_detail_label_description">Description:</string>
    <string name="activity_expense_detail_label_category">Category:</string>
    <string name="activity_expense_detail_label_type">Type:</string>
    <string name="activity_expense_detail_button_edit">Edit</string>
    <string name="activity_expense_detail_button_delete">Delete</string>
    <string name="activity_expense_detail_error_cant_find_image">Error, couldn\'t find full size image, can only display thumbnail.</string>
    <string name="activity_expense_detail_error_cant_delete_expense">There was an error deleting the expense.</string>
    <string name="transition_name_expense_detail_image">expense_detail_image</string>

    /*Preferences activity*/
    <string name="fragment_preferences_no_permissions_dialog_title">Write storage permission</string>
    <string name="fragment_preferences_no_permissions_dialog_text">The data could not be imported/exported because the application does not have writing permission.</string>

    /*Dialog delete expense*/
    <string name="dialog_delete_expense_title">Delete Expense</string>
    <string name="dialog_delete_expense_message">Are you sure you want to delete this Expense?</string>
    <string name="dialog_delete_expense_button_yes">Yes</string>
    <string name="dialog_delete_expense_button_no">No</string>

    /*Dialog create expense*/
    <string name="dialog_capture_ocr_text_title">Capture text</string>
    <string name="dialog_create_expense_title">Create new Expense</string>
    <string name="dialog_create_edit_expense_title">Edit an Expense</string>
    <string name="dialog_create_expense_amount">Amount</string>
    <string name="dialog_create_expense_image">Image</string>
    <string name="dialog_create_expense_description">Description</string>
    <string name="dialog_create_expense_category">Category</string>
    <string name="dialog_create_expense_type">Type</string>
    <string name="dialog_create_expense_button_create">Create</string>
    <string name="dialog_create_expense_button_edit">Edit</string>
    <string name="dialog_create_expense_button_cancel">Cancel</string>
    <string name="dialog_create_expense_error_bad_amount">Please enter a valid amount</string>

    /*Dialog edit delete cc */
    <string name="dialog_edit_delete_cc_title">Edit Credit Card</string>
    <string name="dialog_edit_delete_cc_label_bank_name">Bank Name</string>
    <string name="dialog_edit_delete_cc_label_alias">Alias</string>
    <string name="dialog_edit_delete_cc_label_card_number">Card Number</string>
    <string name="dialog_edit_delete_cc_label_credit_limit">Credit Limit</string>
    <string name="dialog_edit_delete_cc_label_card_expiration">Card Expiration</string>
    <string name="dialog_edit_delete_cc_label_currency">Currency</string>
    <string name="dialog_edit_delete_cc_label_card_type">Card Type</string>
    <string name="dialog_edit_delete_cc_label_background">Preview and Background Color</string>
    <string name="dialog_edit_delete_cc_button_delete">Delete</string>
    <string name="dialog_edit_delete_cc_button_edit">Edit</string>
    <string name="dialog_edit_delete_cc_button_cancel">Cancel</string>
    <string name="dialog_edit_delete_cc_error_bad_amount">Please enter a valid amount</string>
    <string name="dialog_edit_delete_cc_delete_title">Delete Credit Card</string>
    <string name="dialog_edit_delete_cc_delete_message">ARE YOU SURE? This action cannot be undone!</string>


    /*Dialog new credit period*/
    <string name="dialog_new_credit_period_title">Credit Period expired</string>
    <string name="dialog_new_credit_period_text">A new Credit Period will be created, please verify your Credit Card spending limit for this period.</string>
    <string name="dialog_new_credit_period_limit_title">Spending Limit (in %1$s)</string>
    <string name="dialog_new_credit_period_button_create">Create</string>
    <string name="dialog_new_credit_period_button_cancel">Cancel</string>
    <string name="dialog_new_credit_period_error_bad_amount">Please enter a valid amount</string>


    /*Dialog select CC*/
    <string name="dialog_select_cc_title">Select a Credit Card</string>


    /*OCR Create Expense activity*/
    <string name="activity_create_expense_ocr_title">Create expense (OCR)</string>
    <string name="activity_create_expense_ocr_detected_text">Detected text:</string>
    <string name="activity_create_expense_ocr_btn_capture">Capture</string>

    <string name="activity_ocr_create_expense_label_description">Description</string>
    <string name="activity_ocr_create_expense_label_total">Total</string>


    <string name="activity_ocr_create_showcase_resizer_title">Text detection window</string>
    <string name="activity_ocr_create_showcase_resizer_content">Drag this icon to resize</string>
    <string name="activity_ocr_create_showcase_capture_title">Capture button</string>
    <string name="activity_ocr_create_showcase_capture_content">Aim camera to desired text and press this button to capture</string>



    /* Menu overview */
    <string name="menu_overview_add_credit_card">Add Credit Card</string>
    <string name="menu_overview_add_settings">Settings</string>
    <string name="menu_overview_add_about">About</string>
    <string name="menu_overview_add_rate_app">Rate App!</string>


    /* Charts */
    <string name="fragment_charts_no_expenses_message">Not enough data, please add at least one expense</string>


    /* Links */

    <string name="url_market" translatable="false">market://details?id=ve.com.abicelis.creditcardexpensemanager</string>
    <string name="url_github" translatable="false">github.com/abicelis/</string>
    <string name="url_website" translatable="false">www.alejandrobicelis.com.ve</string>
    <string name="address_email" translatable="false">alejandro@alejandrobicelis.com.ve</string>




    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

</resources>
