<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/dialog_edit_delete_cc_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            >
            <TextView
                android:id="@+id/dialog_edit_delete_cc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:text="@string/dialog_edit_delete_cc_title"/>



            <TextView
                android:id="@+id/dialog_edit_delete_cc_label_bank_name"
                android:text="@string/dialog_edit_delete_cc_label_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dialog_edit_delete_cc_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:backgroundTint="@color/gray_700"
                />


            <TextView
                android:id="@+id/dialog_edit_delete_cc_label_alias"
                android:text="@string/dialog_edit_delete_cc_label_alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dialog_edit_delete_cc_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:backgroundTint="@color/gray_700"
                />


            <TextView
                android:id="@+id/dialog_edit_delete_cc_label_card_number"
                android:text="@string/dialog_edit_delete_cc_label_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dialog_edit_delete_cc_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:backgroundTint="@color/gray_700"
                />


            <TextView
                android:id="@+id/dialog_edit_delete_cc_label_credit_limit"
                android:text="@string/dialog_edit_delete_cc_label_credit_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dialog_edit_delete_cc_credit_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:backgroundTint="@color/gray_700"
                />


            <TextView
                android:id="@+id/dialog_edit_delete_cc_label_card_expiration"
                android:text="@string/dialog_edit_delete_cc_label_card_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dialog_edit_delete_cc_card_expiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:backgroundTint="@color/gray_700"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:text="@string/dialog_edit_delete_cc_label_currency"/>

                    <Spinner
                        android:id="@+id/dialog_edit_delete_cc_currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:theme="@style/SpinnerStyle"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:text="@string/dialog_edit_delete_cc_label_card_type"/>

                    <Spinner
                        android:id="@+id/dialog_edit_delete_cc_card_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:theme="@style/SpinnerStyle"/>


                </LinearLayout>

            </LinearLayout>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:text="@string/dialog_edit_delete_cc_label_background"/>-->
            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/dialog_edit_delete_cc_recycler"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"/>-->

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingLeft="24dp"
        >

        <Button
            android:id="@+id/dialog_edit_delete_cc_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/dialog_edit_delete_cc_button_edit"
            android:layout_alignParentRight="true"
            style="?attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/dialog_edit_delete_cc_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/swipe_refresh_red"
            android:text="@string/dialog_edit_delete_cc_button_delete"
            style="?attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/dialog_edit_delete_cc_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toStartOf="@id/dialog_edit_delete_cc_button_edit"
            android:layout_toLeftOf="@id/dialog_edit_delete_cc_button_edit"
            android:text="@string/dialog_edit_delete_cc_button_cancel"
            style="?attr/borderlessButtonStyle"/>

    </RelativeLayout>

</LinearLayout>